[package]
name = "hello-jsonrpsee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
hyper = "0.14.27"
jsonrpsee = { version = "0.18.2", features = ["server", "macros"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
